--- a/2015-3-17/1.html
+++ b/2015-3-17/1.html
@@ -3,97 +3,20 @@
 <head>
   <title></title>
   <style type="text/css">
-  body {
-    margin: 0;
+  .label {
+    background-color: #777;
+    color: #FFF;
+    padding: 2px 5px;
+    border-radius: 3px;
   }
-  .container {
-    width: 700px;
-    margin: auto;
-  }
-  .container::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  .left-col, .main {
-    
-  }
-  .left-col {
-    float: left;
-    background-color: #EEE;
-    width: 200px;
-  }
-  .main {
-    margin-left: 210px;
-  }
-  #nav {
-    background-color: #EEF;
-    padding: 10px 0;
-  }
-  #blue {
-    background-color: #48F;
-    /*
-     * See http://stackoverflow.com/questions/13573653/css-margin-terror-margin-adds-space-outside-parent-element
-     */
-    overflow: auto;
-  }
-  #red {
-    background-color: #F84;
-    /*
-     * See http://stackoverflow.com/questions/13573653/css-margin-terror-margin-adds-space-outside-parent-element
-     */
-    overflow: auto;
-  }
-  @media (max-width: 700px) {
-    .left-col {
-      float: none;
-      width: auto;
-    }
-    .main {
-      margin-left: 0
-    }
+  .label-primary {
+    background-color: #54C;
   }
   </style>
 </head>
 <body>
-  <div id="nav">
-    <div class="container">
-      <a href="###">Nav 1</a> |
-      <a href="###">Nav 2</a> |
-      <a href="###">Nav 3</a>
-    </div>
+  <div class="progress">
+    <div class="progress-bar"></div>
   </div>
-  <section id="blue">
-    <div class="container">
-      <aside class="left-col">
-        <ul>
-          <li><a href="###">Link 1</a></li>
-          <li><a href="###">Link 2</a></li>
-          <li><a href="###">Link 3</a></li>
-          <li><a href="###">Link 4</a></li>
-        </ul>
-      </aside>
-      <article class="main">
-        <h1>I'm heading!</h1>
-        <p>Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. </p>
-      </article>
-    </div>
-  </section>
-  <section id="red">
-    <div class="container">
-      <aside class="left-col">
-        <ul>
-          <li><a href="###">Link 1</a></li>
-          <li><a href="###">Link 2</a></li>
-          <li><a href="###">Link 3</a></li>
-          <li><a href="###">Link 4</a></li>
-        </ul>
-      </aside>
-      <article class="main">
-        <h1>I'm heading!</h1>
-        <p>Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. Some blah blah. </p>
-      </article>
-    </div>
-  </section>
 </body>
 </html>
